# talks

./: .gitignore  LICENSE  README.md
agentic-ai-production/demo/demo-code/: .gitignore  pyproject.toml
agentic-ai-production/demo/demo-code/1-initial-setup/: README.md  backend.py  constants.py  edges.py  graph.py  state.py  ui_gradio.py
agentic-ai-production/demo/demo-code/1-initial-setup/agents/: faq_agent.py  order_agent.py  tone_agent.py  triage_agent.py
agentic-ai-production/demo/demo-code/2-observability/: .env.example  README.md  backend.py  edges.py  graph.py  ui_gradio.py
agentic-ai-production/demo/demo-code/2-observability/agents/: faq_agent.py  human.py  order_agent.py  tone_agent.py  triage_agent.py
agentic-ai-production/demo/demo-code/2-observability/models/: chat_request.py  chat_response.py  state.py
agentic-ai-production/demo/demo-code/3-HITL-state/: README.md  backend.py  constants.py  edges.py  graph.py  ui_gradio.py
agentic-ai-production/demo/demo-code/3-HITL-state/agents/: faq_agent.py  human.py  order_agent.py  tone_agent.py  triage_agent.py
agentic-ai-production/demo/demo-code/3-HITL-state/models/: chat_request.py  chat_response.py  state.py
agentic-ai-production/demo/demo-code/3-HITL-state/tools/: order_tool.py
agentic-ai-production/demo/demo-code/3-rag/: .env.example  README.md  backend.py  constants.py  edges.py  graph.py  ui_gradio.py
agentic-ai-production/demo/demo-code/3-rag/agents/: human.py  (+1 more)
agentic-ai-production/demo/demo-code/4-guardrails/: README.md  backend.py  constants.py  edges.py  graph.py  order_mcp_server.py
(+21 files in other folders)
