[project]
name = "Agentic-AI-Engineering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "chromadb>=1.3.5",
    "datasets>=4.4.1",
    "deprecated>=1.3.1",
    "fastapi>=0.121.2",
    "gradio>=5.49.1",
    "langchain>=1.0.8",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.5",
    "langchain-openai>=1.0.3",
    "langchain-pinecone>=0.2.13",
    "langchain-text-splitters>=1.0.0",
    "langgraph>=1.0.3",
    "langgraph-checkpoint-postgres>=3.0.0",
    "asyncpg>=0.30.0",
    "psycopg[binary]>=3.0.0",
    "langsmith>=0.4.46",
    "mcp>=1.21.1",
    "numpy>=1.24,<2.0",
    "opentelemetry-api>=1.38.0",
    "opentelemetry-exporter-jaeger>=1.21.0",
    "opentelemetry-exporter-otlp>=1.15.0",
    "opentelemetry-instrumentation-fastapi>=0.59b0",
    "opentelemetry-sdk>=1.38.0",
    "pandas>=2.3.3",
    "pinecone>=7.3.0",
    "pypdf>=6.4.0",
    "python-dotenv>=1.2.1",
    "ragas[metrics]>=0.3.9",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "typer>=0.19.2",
    "uvicorn[standard]>=0.38.0",
    "presidio-analyzer>=2.2.360",
    "presidio-anonymizer>=2.2.360",
    "spacy>=3.7.2,<3.8.0",
    # spaCy model packaged as a wheel:
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl"
]
